# MLFastAPI

./: .gitignore  Dockerfile  pyproject.toml
mlfastapi1/: main.py
mlfastapi1/code/: train.py
mlfastapi1/ms/: __init__.py  function.py
tests/: example_calls.txt
