[tool.poetry]
name = "mlfastapi1"
version = "0.1.0"
description = "https://engineering.rappi.com/using-fastapi-to-deploy-machine-learning-models-cd5ed7219ea Tutorial"
authors = ["Alejandro Amar <alejandroamar66gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
pillow = "^9.3.0"
numpy = "^1.23.4"
asgiref = "^3.5.2"
pydantic = "^1.10.2"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
pandas = "^1.5.1"
sklearn = "^0.0.post1"
python-dateutil = "^2.8.2"
packaging = "^21.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
